# Valando

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad-macos/include/glad/: glad.h
glad-macos/src/: glad.c
glad-win32/include/glad/: glad.h
glad-win32/src/: glad.c
resource/shader/: simple.fsh  tex.fsh  tex.vsh
